discussion/kv_engine/176433/176433_rev12_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-35297: Make RangeScan config duration and buffering dynamic

Add "set" paths for changing the runtime value of:

* range_scan_read_buffer_send_size

This value is read from the config when a new scan is created, existing
scans do not pick-up the change.

* range_scan_max_lifetime

This value is push through by a change-listener to the range scan code.
New values take affect when the timeout task is scheduled.

These are deliberately not documented in cbepctl

Change-Id: I578ba6dd35fe6859667468473a53159445d9e167

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-08-31 11:38:49.000000000
Message: 
Uploaded patch set 12.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-08-31 11:44:52.000000000
Message: 
Patch Set 12: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19871/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_owner.cc:178:1: error: version control conflict marker in file [clang-diagnostic-error]
<<<<<<< HEAD
^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_owner.cc:186:47: error: use of undeclared identifier "maxScanDuration" [clang-diagnostic-error]
                                taskable, vb, maxScanDuration));
                                              ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19871/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_owner.cc:178:1:
error: version control conflict marker in file [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19871/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/48805/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/range_scans/range_scan_owner.cc(202): error C2059: syntax error: ")" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/48805/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/41031/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/range_scans/range_scan_owner.cc:178:1:
error: version control conflict marker in file
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/41031/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9566/ : FAILURE

Compile error at [2022-08-31T11:39:52.932Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/range_scans/range_scan_owner.cc:178:1:
error: version control conflict marker in file
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9566/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9665/ : FAILURE

Compile error at [2022-08-31T11:40:54.417Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/engines/ep/src/range_scans/range_scan_owner.cc:178:1:
error: version control conflict marker in file
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9665/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21823/ : FAILURE

Compile error at [2022-08-31T11:41:09.606Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/range_scans/range_scan_owner.cc:178:1:
error: version control conflict marker in file
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21823/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/21115/ : FAILURE

Compile error at [2022-08-31T11:43:00.226Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/range_scans/range_scan_owner.cc:178:1:
error: version control conflict marker in file
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/21115/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22176/ : FAILURE

Compile error at [2022-08-31T11:40:48.602Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/range_scans/range_scan_owner.cc:178:1:
error: version control conflict marker in file
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22176/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22913/ : FAILURE

Compile error at [2022-08-31T11:39:55.919Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/range_scans/range_scan_owner.cc:178:1:
error: version control conflict marker in file
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22913/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30205/ : FAILURE

Compile error at [2022-08-31T11:40:39.646Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/range_scans/range_scan_owner.cc:178:1:
error: version control conflict marker in file
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30205/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/19092/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
